# mapper

./: Cargo.toml  README.md  Readme.md  notes.txt
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: lib.rs
impl/: Cargo.toml
impl/src/: ast.rs  expand.rs  lib.rs  valid.rs
impl/src/ast/: data_type.rs  field.rs  mapping_field.rs  mapping_tree.rs  mod.rs
impl/src/attr/: aggregated_to.rs  attrs.rs  data_type.rs  field.rs  mapping_strategy.rs  mod.rs  spanned_item.rs  to.rs
impl/src/attr/data_type/: mod.rs  params.rs
impl/src/attr/field/: mod.rs  params.rs
impl/src/common/: mod.rs  punctuated_extensions.rs
impl/src/expand/: mapping_field.rs  mapping_tree.rs  mod.rs
impl/src/test/: mod.rs
impl/src/test/attr/: field_test.rs  mod.rs
mapper/: Cargo.toml
mapper_proc_macro/: Cargo.toml
mapper_proc_macro/src/: ast.rs  attr.rs  expand.rs  generics.rs  lib.rs  valid.rs
mapper_proc_macro/src/attr/: data_type.rs  field.rs
mapper_proc_macro/src/test/attr/: field_test.rs
mapper_test/: Cargo.toml
mapper_test/src/: main.rs
mapper_test/src/tests/: attribute_macro.rs
src/: lib.rs
src/tests/: automatic_map.rs  field_map.rs  mod.rs  struct_map.rs
tests/: field_map.rs  struct_map.rs
tests/ui/: additive_mapping_on_automatic_mapping_dest.rs  additive_mapping_on_automatic_mapping_dest.stderr  exclude_additive_mapping_field.rs  exclude_additive_mapping_field.stderr  to_field_attribute_without_args.rs  to_field_attribute_without_args.stderr  to_field_attribute_without_config.rs  to_field_attribute_without_config.stderr  with_use_undefined_strategy.rs  with_use_undefined_strategy.stderr
