[package]
name = "mapper"
version = "1.0.7"
authors = ["Sacha Bailleul <bailleul.sacha@gmail.com>"]
categories = ["rust-patterns"]
description = "derive(Mapper)"
edition = "2021"
keywords = ["decoupling", "mapping", "derive"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sbailleul/mapper"
rust-version = "1.56"
doctest = false

[dependencies]
mapper-impl = { version = "=1.0.3", path = "impl" }
mapper-api = { version = "=1.0.2", path = "api" }

[workspace]
members = [
    "api",
    "impl",
]

