[package]
name = "mapper"
version = "1.1.1"
authors = ["Sacha Bailleul <bailleul.sacha@gmail.com>"]
categories = ["rust-patterns"]
description = "Mapping macro to help to reduce mapping boilerplate"
edition = "2021"
keywords = ["decoupling", "mapping", "derive"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sbailleul/mapper"
documentation = "https://docs.rs/mapper"
rust-version = "1.56"
doctest = false

[dependencies]
mapper-impl = { version = "=1.1.0", path = "impl" }
mapper-api = { version = "=1.0.2", path = "api" }

[dev-dependencies]
rustversion = "1.0.11"
trybuild = { version = "1.0.72", features = ["diff"] }

[workspace]
members = [
    "api",
    "impl",
]

