[package]
name = "mapper_proc_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0.75",features=["full","fold"]}
quote = "1.0.21"
proc-macro2 = "1.0.47"
thiserror="1.0.37"
mapper={path="../mapper"}
